--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,9 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Let's Cook Lasagna!</title>
 </head>
 <body>
     <h1>Lasagna Recipe!</h1>
+    <img src="../images/lasagna.jpg" alt="Delicious Lasagna" height="300" width="300">
+    <h2> Description:</h2>
+    <h3> A classic Italian dish with layers of pasta, meat sauce, and cheese.</h3>
+    <h2> Ingredients:</h2>
+    <ul>
+        <li>1 lb ground beef</li>
+        <li>1 jar marinara sauce</li>
+        <li>12 lasagna noodles</li>
+        <li>2 cups ricotta cheese</li>
+        <li>2 cups shredded mozzarella cheese</li>
+        <li>1/2 cup grated Parmesan cheese</li>
+        <li>2 eggs</li>
+        <li>2 tbsp olive oil</li>
+        <li>Salt and pepper to taste</li>
+    </ul>
+    <h2> Instructions:</h2>
+    <ol>
+        <li>Preheat oven to 375°F (190°C).</li>
+        <li>In a large skillet, heat olive oil over medium heat. Add ground beef and cook until browned. Drain excess fat.</li>
+        <li>Add marinara sauce to the               beef and simmer for 10 minutes.</li>
+        <li>Cook lasagna noodles according to package instructions. Drain and set aside.</li>
+        <li>In a bowl, mix ricotta cheese, eggs, and half of the Parmesan cheese. Season with salt and pepper.</li>
+        <li>In a baking dish, spread a thin layer of meat sauce. Layer with noodles, ricotta mixture, mozzarella cheese, and meat sauce. Repeat layers, ending with meat sauce and remaining mozzarella and Parmesan cheese on top.</li>
+        <li>Cover with foil and bake for 25 minutes. Remove foil and bake for an additional 25 minutes, or until cheese is bubbly and golden.</li>
+        <li>Let lasagna rest for 10 minutes before serving. Enjoy!</li>
+    </ol>
+    <a href="../index.html">Back to Home</a>
 </body>
 </html>
