--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     <h1> <title>Brando's Recipes</title> </h1>
 </head>
 <body>
-    <h1> Brandon's Recipes</h1>
+    <h1> Brando's Recipes</h1>
     <a href="recipes/lasagna.html">Lasagna Recipe</a>
+<p>
+    <a href="recipes/pasta.html">Pasta Recipe</a>
+</p>
+<p>
+    <a href="recipes/risotto.html">Risotto Recipe</a>
+</p>
 </body>
-</html>
+<body> 
+</html> 
