--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 <p>
     <a href="recipes/risotto.html">Risotto Recipe</a>
 </p>
+<p>
+    <a href="recipes/biryani.html">Chicken Biryani Recipe</a>
+</p>
 </body>
 <body> 
 </html> 
